--- a/style.css.css
+++ b/style.css.css
@@ -37,25 +37,18 @@ h1 {
 }
 
 #image {
-  max-width: 70%;
+  
   display: block;
   height: auto;
   border-radius: 5px;
   border: 1px solid black;
-  margin: 0 auto;
+  
 }
 
 #img-div {
-  background-color: #116466;
-  padding: 10px;
-  margin: 0;
+  
 }
 
-@media (max-width: 460px) {
-  #img-caption {
-    font-size: 1.4rem;
-  }
-}
 
 #img-caption {
   margin: 15px 0 5px 0;
@@ -78,8 +71,6 @@ ul {
   line-height: 1.6;
   list-style-type: square;
 }
-
-
 
 .fig-caption2 {
   padding: 0 0 20px 0;
@@ -104,4 +95,11 @@ blockquote {
 
 a:visited {
   color: #74638f;
+}
+
+/* Media Query */
+@media (max-width: 460px) {
+  #img-caption {
+    font-size: 1.4rem;
+  }
 }
