--- a/style.css.css
+++ b/style.css.css
@@ -32,13 +32,20 @@ h1 {
   margin-right: auto;
 }
 
-#image {
-  
+.alan-image {
   display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
+  max-width: 700px;
   height: auto;
-  border-radius: 5px;
-  border: 1px solid black;
  
+}
+
+#image2 {
+  width: 100%;
+  max-width: 800px;
+  height: auto;
 }
 
 
